test/type_errors/cases/sql_nine_fields.ml
[%%eta.sql.table type t = { a : int; b : int; c : int; d : int; e : int; f : int; g : int; h : int; i : int }]
